# PyCMG

./: .gitignore  .gitmodules  ASAP7_DEEP_DIVE_BUGS.md  CLAUDE.md  CMakeLists.txt  README.md  TSMC7_PROCESS_META_PLAN.md  environment.yml  main.py  pytest.ini  reproduce_asap7.py  requirements.txt  test_tsmc7_clean.cir  test_tsmc7_fixed.cir  test_tsmc7_load.cir  test_tsmc7_minimal.py  test_tsmc7_parse.cir  test_tsmc7_pmos_standalone.py  test_tsmc7_syntax.cir
bsim-cmg-va/: README.txt
circuit_examples/: test_tsmc7_clean.cir  test_tsmc7_fixed.cir  test_tsmc7_load.cir  test_tsmc7_parse.cir  test_tsmc7_syntax.cir
cpp/: osdi_cli.cpp  osdi_eval.cpp  osdi_host.cpp  osdi_host.h  pycmg_bindings.cpp
examples/: demo_tsmc7_variant_selector.py
pycmg/: README.md  __init__.py  ctypes_host.py  testing.py
scripts/: build_osdi.sh  clean_osdi.sh  deep_verify.py  generate_naive_tsmc.py  generate_naive_tsmc7.py  test_robustness.py
tests/: __init__.py  conftest.py  test_ac_caps.py  test_api.py  test_asap7.py  test_asap7_full_verify.py  test_body_bias.py  test_comprehensive.py  test_dc_jacobian.py  test_dc_regions.py  test_deep_verify_backend.py  test_deep_verify_stress.py  test_integration.py  test_nfin_scaling.py  test_parse_modelcard.py  test_pure_pycmg.py  test_pycmg_eval_dc.py  test_pycmg_import.py  test_pycmg_model_instance.py  test_pycmg_rebind.py  test_reproduce_asap7.py  test_robustness_helpers.py  test_temperature.py  test_transient.py  test_tsmc16.py  test_tsmc5.py  test_tsmc7.py  test_tsmc7_comprehensive.py  test_tsmc7_naive.py  test_tsmc7_nf_nfin.py  test_tsmc7_pdk.py  (+6 more)
(+110 files in other folders)
